# PyConfocal

./: .gitignore  README.md  pyproject.toml
examples/: acquire_many_images.py  acquire_single_image.py  continuous_acquisition.py  continuous_imaging.py  get_ip.py  many_fov_images.py
examples/microscope_examples/: many_fov_images.py
examples/microscope_examples/old_scripts/: continuous_image_acquisition_ramp.py  single_big_image_acquisition_ramp.py  single_image_acquisition_ramp.py  single_image_acquisition_triangle.py
examples/old_scripts/: README.md  continuous_image_acquisition_ramp.py  single_big_image_acquisition_ramp.py  single_image_acquisition_ramp.py  single_image_acquisition_triangle.py
pyconfocal/: __init__.py  acquisition_controller.py  acquisition_port.py  confocal_microscope.py  digital_pin.py  generator_controller.py  generator_port.py  scpi_controller.py  setup.py
